--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "cashflow",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "productName": "Calculadora de Impuesto Verde",
   "author": "denilsson.d.sousa@gmail.com",
   "private": true,
   "scripts": {
